--- a/aula 8/mino/index.html
+++ b/aula 8/mino/index.html
@@ -6,8 +6,15 @@
     <link rel="shortcut icon" href="../imagens/1d2527bc85b5b024228b4027a9523980.jpg" type="image/x-icon">
     <title>minotauro</title>
 </head>
+<script>
+    function fecharjanela(){
+        var win = window.open("", "_self");
+        win.close();
+    }
+    
+</script>
 <body>
-<p><a href="../index.html">VOLTAR AO SITE PRINCIPAL</a></p>
+<a href="javascript:fecharjanela()">VOLTAR AO SITE PRINCIPAL</a>
 
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
